# camera_tracking

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ci-bst-checks.sh  ci-format.sh  ci-lint.sh  ci-mypy.sh  ci-unit-tests.sh  create_venv.sh  local.env  local_sit.env  package.xml  pkgInfo.py  pyproject.toml  requirements.txt  requirements_ci.txt  setup.py  sonar-project.properties
data/: Logitech-C920.yaml
data/calibration/: azure_kinect_color_control.yaml
data/log/: aruco.txt
data/markers/: replace_aruco_14cm_id.sh  replace_aruco_4cm_ids.sh  replace_big_marker_id.sh  replace_marker_ids.sh  shift_marker.sh
data/test/: aruco_test_reference_landmarks.json  body.yaml  mediapipe_test_reference_landmarks.json
launch/: azure_tracking.launch  body_to_landmark.launch  tracking.launch  webcam_tracking.launch
nodes/: azure_tracking_node.py  body_to_landmark_node.py  tracking_node.py  webcam_tracking_node.py
scripts/: aruco_evaluate.py  aruco_plot.py  aruco_plot_track.py  azure_tracking_socket.py  exampleBodyTracking.py  webcam_tracking_socket.py
src/camera_tracking/: aruco_tracking.py  azure_tracking.py  base_tracking.py  camera_helper.py  intrinsic_calibration.py  mediapipe_tracking.py  pykinect_azure_add_on.py  pykinect_azure_fix.py  track_aruco.py  track_mediapipe.py  webcam_tracking.py
src/pyKinectAzure3rdParty/examples/: exampleBodySegmentation.py  exampleBodyTracking.py  exampleBodyTrackingColorCamera.py  exampleBodyTrackingLiteModel.py  exampleBodyTrackingMG.py  exampleColorImageOpenCV.py  (+7 more)
tests/: conftest.py  test_camera_helper.py
(+9 files in other folders)
