<?xml version="1.0"?>
<package format="2">
    <name>camera_tracking</name>
    <version>0.0.0</version>
    <description>A package containing tools for camera based tracking</description>

    <maintainer email="stephan.hasler@honda-ri.de">Stephan Hasler</maintainer>

    <license>BSD 3-Clause License</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
